[package]
name = "polling_application_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-session = "0.8.0"
actix-identity = "0.6.0"
webauthn-rs = { version = "0.5.0", features = ["danger-allow-state-serialisation"] }
mongodb = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
argon2 = "0.5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = "1.11.0"
dotenv = "0.15.0"
utoipa={version="3.3.0",features = ["actix_extras","chrono"]}
utoipa-swagger-ui = {version="3.1.3",features=["actix-web"]}
actix-cors = "0.7.0"
jsonwebtoken = "9.3.0"
actix-service = "2.0.2"
futures = "0.3.31"
chrono = {version="0.4.39",features=["serde"]}
nanoid = "0.4.0"
actix-rt = "2.10.0"

[dev-dependencies]
mockall = "0.11.3"
